--- a/carrinho.css
+++ b/carrinho.css
@@ -4,9 +4,6 @@
     font-weight: bold;
     font-size: 150%;
 }
-.category_block li:hover {
-    background-color: #007bff;
-}
 .category_block li:hover a {
     color: #ffffff;
 }
@@ -38,12 +35,28 @@
     text-transform: uppercase;
     text-align: center;
 }
-.product_rassurance .list-inline li:hover {
-    color: #343a40;
+
+.shopcar{
+   width: 60px;
+   height: 60px; 
 }
-.reviews_product .fa-star {
-    color: gold;
-}
-.pagination {
-    margin-top: 20px;
-}
+
+.quantity {
+    padding-top: 10px;
+    margin-right: 30px;
+  }
+  .quantity input {
+    -webkit-appearance: none;
+    border: none;
+    text-align: center;
+    width: 32px;
+    font-size: 14px;
+    color: #43484D;
+    font-weight: 300;
+  }
+  .minus-btn img {
+    margin-bottom: 3px;
+  }
+  .plus-btn img {
+    margin-top: 2px;
+  }
